test_regress/t/t_with.out
%Error-UNSUPPORTED: t/t_with.v:19:31: Unsupported: with statements
   19 |       found = aliases.find(i) with (i == tofind);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_with.v:21:23: Unsupported: with statements
   21 |       aliases.find(i) with (i == tofind);
      |                       ^~~~
%Error-UNSUPPORTED: t/t_with.v:24:28: Unsupported: with statements
   24 |       found = aliases.find with (item == i);
      |                            ^~~~
%Error-UNSUPPORTED: t/t_with.v:25:20: Unsupported: with statements
   25 |       aliases.find with (item == i);
      |                    ^~~~
%Error-UNSUPPORTED: t/t_with.v:29:30: Unsupported: with statements
   29 |       found = aliases.unique with (id);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_with.v:30:32: Unsupported: with statements
   30 |       found = aliases.unique() with (id);
      |                                ^~~~
%Error-UNSUPPORTED: t/t_with.v:31:33: Unsupported: with statements
   31 |       found = aliases.unique(i) with (id);
      |                                 ^~~~
%Error-UNSUPPORTED: t/t_with.v:32:25: Unsupported: with statements
   32 |       i = aliases.or(v) with (v);
      |                         ^~~~
%Error: t/t_with.v:32:22: Can't find definition of variable: 'v'
   32 |       i = aliases.or(v) with (v);
      |                      ^
%Error-UNSUPPORTED: t/t_with.v:33:26: Unsupported: with statements
   33 |       i = aliases.and(v) with (v);
      |                          ^~~~
%Error-UNSUPPORTED: t/t_with.v:34:26: Unsupported: with statements
   34 |       i = aliases.xor(v) with (v);
      |                          ^~~~
%Error: Exiting due to
